compiler/testData/diagnostics/tests/dataClasses/dataObject.fir.kt
data object Object<!CONSTRUCTOR_IN_OBJECT!>(val x: Int, val y: Int)<!>
